--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -63,8 +63,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 675px;
-  margin: 0 auto 60px;
+  width: 700px;
+  margin-bottom: 60px;
 }
 
 .review__toggle-btn {
@@ -110,7 +110,6 @@
   display: flex;
   align-items: center;
   width: 970px;
-  margin: 0 auto;
   list-style: none;
 }
 .clients__item {
@@ -129,7 +128,11 @@
   margin: auto;
 }
 
-@media only screen and (min-width : 960px) and (max-width : 1024px) {
+.review__name-mobile {
+  display: none;
+}
+
+@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .reviews__wrapper {
     width: 1024px;
     margin: 0 auto;
@@ -140,7 +143,7 @@
 
   .reviews__title {
     width: 500px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     font-size: 20px;
     line-height: 27px;
     font-weight: normal;
@@ -157,11 +160,15 @@
     display: none;
   }
   .review__toggle {
-    width: 500px;
+    width: 700px;
+    padding-right: 25px;
   }
   .clients__list {
-    width: 660px;
+    width: 700px;
     margin: 0;
+  }
+  .review__name-mobile {
+    display: none;
   }
 }
 @media only screen and (min-width : 640px) and (max-width : 959px) {
@@ -173,6 +180,7 @@
   }
   .reviews__title-mobile {
     order: 0;
+    width: fit-content;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -181,7 +189,7 @@
   .reviews__title-mobile:after {
     content: '';
     display: block;
-    width: 120px;
+    width: 100%;
     height: 3px;
     margin-top: 5px;
     margin-bottom: 40px;
@@ -192,7 +200,7 @@
   }
   .reviews__slider {
     order: 2;
-    width: 335px;
+    width: auto;
     border-radius: 0 0 10px 10px;
     background-color: #f8f8f8;
     padding: 20px;
@@ -203,7 +211,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 335px;
+    width: auto;
     margin: 0 auto -12px;
     border-radius: 10px 10px 0 0;
     background-color: #f8f8f8;
@@ -245,6 +253,9 @@
     width: 200px;
     margin-bottom: auto;
     margin-bottom: 20px;
+  }
+  .clients__list {
+    width: 280px;
   }
 }
 @media only screen and (min-width : 320px)and (max-width : 639px) {
@@ -255,6 +266,7 @@
     padding: 50px 20px 0;
   }
   .reviews__title-mobile {
+    width: fit-content;
     order: 0;
     display: inline-block;
     font-size: 26px;
@@ -264,7 +276,7 @@
   .reviews__title-mobile:after {
     content: '';
     display: block;
-    width: 120px;
+    width: 100%;
     height: 3px;
     margin-top: 5px;
     margin-bottom: 40px;
@@ -275,7 +287,7 @@
   }
   .reviews__slider {
     order: 2;
-    width: 335px;
+    width: 100%;
     border-radius: 0 0 10px 10px;
     background-color: #f8f8f8;
     padding: 20px;
@@ -286,7 +298,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 335px;
+    width: 100%;
     margin: 0 auto -12px;
     border-radius: 10px 10px 0 0;
     background-color: #f8f8f8;
@@ -328,5 +340,8 @@
     width: 200px;
     margin-bottom: auto;
     margin-bottom: 20px;
+  }
+  .clients__list {
+    width: 100%;
   }
 }
