--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -86,7 +86,7 @@
   margin-bottom: 14px;
 }
 
-@media only screen and (min-width : 960px) and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .about__wrapper {
     justify-content: flex-start;
     width: 1024px;
@@ -126,6 +126,7 @@
     padding: 50px 30px 0;
   }
   .about__title {
+    width: fit-content;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -134,7 +135,7 @@
   .about__title:after {
     content: '';
     display: block;
-    width: 142px;
+    width: 100%;
     height: 3px;
     margin-top: 5px;
     background-color: #c50b1e;
@@ -187,6 +188,7 @@
     padding: 50px 20px 0;
   }
   .about__title {
+    width: fit-content;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -195,7 +197,7 @@
   .about__title:after {
     content: '';
     display: block;
-    width: 142px;
+    width: auto;
     height: 3px;
     margin-top: 5px;
     background-color: #c50b1e;
