--- a/app/scss/blocks/advantages.scss
+++ b/app/scss/blocks/advantages.scss
@@ -39,7 +39,7 @@
 .advantages__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-between;;
   align-items: flex-start;
 }
 
@@ -49,12 +49,13 @@
   align-items: center;
   justify-content: center;
   width: 300px;
+  margin-right: 40px;
   margin-bottom: 35px;
 }
 .advantages__img {
   margin-bottom: 10px;
   align-self: flex-start;
-  fill: #fff;
+  fill: #c50b1e;
 }
 
 .advantages__title {
@@ -65,10 +66,11 @@
   line-height: 24px;
 }
 .advantages__text {
+  min-height: 60px;
   font-size: 14px;
   line-height: 18px;
 }
-@media only screen and (min-width : 960px) and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .advantages__wrapper {
     width: 1024px;
     margin: 0 auto;
@@ -89,9 +91,20 @@
   .advantages__teaser-mobile {
     display: none;
   }
-  .advantages__item {
-    width: 33%;
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
   }
+  .advantages__item {
+    width: 220px;
+
+  }
+  .advantages__img {
+    fill: #c50b1e;
+  }
+
   .advantages__title {
     margin-bottom: 11px;
     align-self: flex-start;
@@ -100,7 +113,7 @@
     line-height: 19px;
   }
   .advantages__text {
-    padding-right: 20px;
+    min-height: 60px;
     font-size: 12px;
     line-height: 16px;
     text-align: left;
@@ -118,6 +131,7 @@
     display: none;
   }
   .advantages__teaser-mobile {
+    width: fit-content;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -134,6 +148,15 @@
   }
   .advantages__button {
     display: none;
+  }
+  .advantages__item {
+    width: 100%;
+  }
+  .advantages__img {
+    fill: #c50b1e;
+  }
+  .advantages__text {
+    min-height: 60px;
   }
 }
 @media only screen and (min-width : 320px)and (max-width : 639px) {
@@ -148,6 +171,7 @@
     display: none;
   }
   .advantages__teaser-mobile {
+    width: fit-content;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -164,5 +188,17 @@
   }
   .advantages__button {
     display: none;
+  }
+  .advantages__item {
+    width: 100%;
+  }
+  .advantages__img {
+    fill: #c50b1e;
+  }
+  .mobile-slider__wrap {
+    width: 100%;
+  }
+  .advantages__text {
+    min-height: 60px;
   }
 }
