--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -263,6 +263,9 @@
   width: 30px;
   height: 30px;
 }
+.social__link svg  {
+  fill: #c50b1e;
+}
 .social__link:hover {
   opacity: .4;
 }
@@ -274,7 +277,7 @@
   color: #000;
 }
 
-@media only screen and (min-width : 960px) and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .contacts__wrapper {
     display: flex;
     width: 1024px;
