--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,6 +1,5 @@
-$bg-darkgray: #292929;
-$bg-lightgray: #f8f5f2;
 $tablet-width: 768px;
+$laptop-width: 1024px;
 $desctop-width: 1200px;
 $mobile-width-only: 767px;
 $retina-dpi: 144dpi;
