--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -1,237 +1,207 @@
 .about {
   width: auto;
 }
-
 .about__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  width: 1280px;
-  margin: 0 auto;
-  padding-left: 155px;
-  padding-top: 100px;
-  padding-right: 55px;
-}
-.about__left-col {
-  width: 500px;
-  margin-right: 60px;
-  margin: 0;
-  padding: 0;
-}
-.about__right-col {
-  align-self: flex-start;
-  width: 50%;
-  margin: 0;
-  padding: 0;
-}
-
-.about__title {
   display: block;
-  width: 800px;
-  margin-bottom: 30px;
-  font-size: 28px;
-  line-height: 38px;
+  min-width: 320px;
+  padding: 0 20px;
+}
+.about__title {
+  width: fit-content;
+  display: inline-block;
+  margin-bottom: 40px;
+  font-size: 26px;
+  line-height: 32px;
   font-weight: normal;
-  text-align: left;
 }
 .about__title:after {
   content: '';
   display: block;
-  vertical-align: middle;
-  width: 80px;
+  width: 100%;
   height: 3px;
+  margin-top: 5px;
   background-color: #c50b1e;
+}
+.about__left-col,
+.about__right-col {
+  width: auto;
 }
 .about__text {
-  font-size: 16px;
+  margin-bottom: 23px;
+  padding-right: 10px;
+  font-size: 14px;
+  line-height: 24px;
 }
-.about__text p {
-  margin-bottom: 25px;
+.about__text-header {
+  display: none;
 }
-
+.about__link {
+  display: none;
+}
+.about__right-col {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.about__img {
+  width: 100%;
+}
 .about__stats {
   display: flex;
-  justify-content: flex-start;
-
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 .about__stats p {
-  width: 146px;
-  margin-right: 5px;
+  width: 135px;
+  margin-bottom: 10px;
   text-align: left;
-}
+  font-size: 14px;
+  line-height: 19px;
+  }
 .about__stats span {
   display: block;
-  margin-bottom: 5px;
-  font-size: 36px;
-  line-height: 47px;
-
+  font-size: 30px;
+  line-height: 41px;
 }
 
-.about__link {
-  margin-top: 40px;
-  margin-bottom: 30px;
-  display: inline-block;
-  margin-bottom: 85px;
-  padding: 10px 20px;
-  background-color: #c50b1e;
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: none;
-  font-weight: normal;
-}
+@media (min-width: $tablet-width) {
+  .about {
+    position: relative;
+    width: auto;
+    margin: 0;
+  }
 
-.about__img {
-  align-self: flex-start;
-  margin-bottom: 14px;
-}
-
-@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .about__wrapper {
-    justify-content: flex-start;
-    width: 1024px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 768px;
     margin: 0 auto;
-    padding-left: 135px;
+    padding-left: 100px;
     padding-top: 100px;
-    padding-right: 42px;
+    padding-right: 40px;
   }
   .about__left-col {
-    width: 460px;
-    margin-right: 25px;
+    width: 50%;
+    margin-right: 60px;
+    margin: 0;
+    padding: 0;
+    padding-right: 20px;
   }
   .about__right-col {
-    width: 350px;
-  }
-  .about__text {
-    font-size: 14px;
-  }
-  .about__stats p {
-    width: 111px;
-    margin-right: 5px;
-    text-align: left;
-    font-size: 14px;
-    line-height: 19px;
-    }
-  .about__stats span {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 30px;
-    line-height: 41px;
-  }
-}
-@media only screen and (min-width : 640px) and (max-width : 959px) {
-  .about__wrapper {
-    display: block;
-    width: auto;
-    padding: 50px 30px 0;
+    align-self: flex-start;
+    width: 50%;
+    margin: 0;
+    padding: 0;
   }
   .about__title {
-    width: fit-content;
-    display: inline-block;
-    font-size: 26px;
-    line-height: 32px;
+    display: block;
+    width: 800px;
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 38px;
     font-weight: normal;
+    text-align: left;
   }
   .about__title:after {
     content: '';
     display: block;
-    width: 100%;
+    vertical-align: middle;
+    width: 80px;
     height: 3px;
-    margin-top: 5px;
     background-color: #c50b1e;
   }
-  .about__left-col,
-  .about__right-col {
-    width: auto;
-  }
   .about__text {
-    padding-right: 10px;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 16px;
   }
-  .about__text-header {
-    display: none;
+  .about__text p {
+    margin-bottom: 0;
   }
-  .about__link {
-    display: none;
-  }
-  .about__right-col {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  .about__img {
-    width: 100%;
-  }
+
   .about__stats {
-    flex-wrap: wrap;
-    margin-bottom: 20px;
+    display: flex;
+    justify-content: flex-start;
   }
   .about__stats p {
-    width: 133px;
+    width: 146px;
     margin-right: 5px;
-    margin-bottom: 20px;
     text-align: left;
-    font-size: 14px;
-    line-height: 19px;
-    }
+  }
+  .about__stats p:first-child {
+    width: 110px;
+  }
   .about__stats span {
     display: block;
     margin-bottom: 5px;
-    font-size: 30px;
-    line-height: 41px;
+    font-size: 36px;
+    line-height: 47px;
   }
-}
-@media only screen and (min-width : 320px)and (max-width : 639px) {
-  .about__wrapper {
-    display: block;
-    width: auto;
-    padding: 50px 20px 0;
-  }
-  .about__title {
-    width: fit-content;
+
+  .about__link {
+    margin-top: 40px;
+    margin-bottom: 30px;
     display: inline-block;
-    font-size: 26px;
-    line-height: 32px;
+    margin-bottom: 85px;
+    padding: 10px 20px;
+    background-color: #c50b1e;
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: none;
     font-weight: normal;
   }
-  .about__title:after {
-    content: '';
-    display: block;
-    width: auto;
-    height: 3px;
-    margin-top: 5px;
-    background-color: #c50b1e;
-  }
-  .about__left-col,
-  .about__right-col {
-    width: auto;
-  }
-  .about__text {
-    padding-right: 10px;
-    font-size: 14px;
-    line-height: 24px;
-  }
-  .about__text-header {
-    display: none;
-  }
-  .about__link {
-    display: none;
-  }
-  .about__right-col {
-    display: flex;
-    flex-direction: column-reverse;
-  }
+
   .about__img {
-    width: 100%;
+    align-self: flex-start;
+    margin-bottom: 14px;
+    order: 1;
   }
-  .about__stats {
-    flex-wrap: wrap;
+}
+@media (min-width: $laptop-width) {
+  .about__wrapper {
+    width: 1024px;
+    margin: 0 auto;
+    padding-left: 100px;
+    padding-top: 140px;
+    padding-right: 40px;
+  }
+  p.about__text-header {
+    display: block;
     margin-bottom: 20px;
   }
   .about__stats p {
-    width: 133px;
-    margin-right: 5px;
-    margin-bottom: 20px;
+    width: 140px;
+    margin-right: 10px;
+  }
+}
+@media (min-width: $desctop-width) {
+  .about {
+    width: auto;
+    margin: 0;
+    padding: 0;
+  }
+  .about__wrapper {
+    width: 1280px;
+    margin: 0 auto;
+    padding-left: 155px;
+    padding-top: 100px;
+    padding-right: 55px;
+  }
+  .about__left-col {
+    width: 50%;
+    margin-right: 0;
+  }
+  .about__right-col {
+    width: 50%;
+  }
+  .about__title {
+    margin-bottom: 40px;
+  }
+
+  .about__text {
+    font-size: 14px;
+  }
+  .about__stats p {
+    margin-right: 20px;
     text-align: left;
     font-size: 14px;
     line-height: 19px;
