--- a/app/scss/blocks/advantages.scss
+++ b/app/scss/blocks/advantages.scss
@@ -1,107 +1,135 @@
 .advantages {
   width: auto;
-  background-color: #f9f9f9;
 }
-
 .advantages__wrapper {
-  width: 1280px;
-  margin: 0 auto;
-  padding-left: 155px;
-  padding-top: 100px;
-  padding-right: 55px;
+  width: auto;
+  padding: 50px 20px 0;
 }
 .advantages__topline {
-  display: flex;
-  align-items: center;
-  margin-bottom: 70px;
-  
+  margin: 0;
 }
 .advantages__teaser {
-  width: 580px;
-  margin-right: 185px;
-  font-size: 20px;
-  line-height: 25px;
-  font-weight: normal;
-}
-.advantages__teaser-mobile {
   display: none;
 }
-.advantages__button {
+.advantages__teaser-mobile {
+  width: fit-content;
   display: inline-block;
-  padding: 10px 20px;
-  background-color: #c50b1e;
-  text-transform: none;
+  font-size: 26px;
+  line-height: 32px;
   font-weight: normal;
-  color: #fff;
-  font-size: 16px;
-  line-height: 18px;
 }
-.advantages__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;;
-  align-items: flex-start;
+.advantages__teaser-mobile:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  margin-top: 5px;
+  margin-bottom: 40px;
+  background-color: #c50b1e;
 }
-
+.advantages__button {
+  display: none;
+}
 .advantages__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 300px;
-  margin-right: 40px;
-  margin-bottom: 35px;
+  position: relative;
+  width: 100%;
+  padding: 25px 15px;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  margin-bottom: 25px;
+  z-index: 5;
+
 }
 .advantages__img {
-  margin-bottom: 10px;
-  align-self: flex-start;
   fill: #c50b1e;
 }
-
-.advantages__title {
-  margin-bottom: 11px;
-  align-self: flex-start;
-  color: #000;
-  font-size: 18px;
-  line-height: 24px;
+.mobile-slider__wrap {
+  width: 100%;
 }
 .advantages__text {
   min-height: 60px;
-  font-size: 14px;
-  line-height: 18px;
 }
-@media only screen and (min-width : 960px) and (max-width : 1120px) {
+
+@media (min-width: $tablet-width) {
+  .advantages {
+    position: relative;
+    width: auto;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+  }
+
   .advantages__wrapper {
-    width: 1024px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 768px;
     margin: 0 auto;
-    padding-left: 135px;
+    padding-left: 100px;
     padding-top: 100px;
-    padding-right: 42px;
+    padding-right: 40px;
   }
   .advantages__topline {
+    display: flex;
+    width: 100%;
+    align-items: center;
     margin-bottom: 65px;
     
   }
   .advantages__teaser {
-    width: 460px;
-    margin-right: 50px;
+    display: block;
+    width: 440px;
+    margin-right: 15px;
     font-size: 16px;
     line-height: 25px;
+    font-weight: normal;
   }
+
   .advantages__teaser-mobile {
     display: none;
   }
+  .advantages__button {
+    display: inline-block;
+    padding: 5px 10px;
+    margin-left: auto;
+    background-color: #c50b1e;
+    text-transform: none;
+    font-weight: normal;
+    color: #fff;
+    font-size: 16px;
+    line-height: 18px;
+  }
+
   .advantages__list {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
   }
-  .advantages__item {
-    width: 220px;
-
+  .mobile-slider__wrap {
+    width: 300px;
   }
+  .mobile-slider__wrap:last-child {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .advantages__item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    padding: 0;
+    margin-bottom: 35px;
+  }
+
   .advantages__img {
+    margin-bottom: 10px;
+    align-self: flex-start;
     fill: #c50b1e;
   }
 
@@ -109,96 +137,131 @@
     margin-bottom: 11px;
     align-self: flex-start;
     color: #000;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .advantages__text {
+    align-self: flex-start;
+    width: 280px;
+    min-height: 80px;
+    padding-right: 5px;
     font-size: 14px;
-    line-height: 19px;
+    line-height: 18px;
   }
-  .advantages__text {
-    min-height: 60px;
-    font-size: 12px;
-    line-height: 16px;
-    text-align: left;
-  }
+
 }
-@media only screen and (min-width : 640px) and (max-width : 959px) {
-  .advantages__wrapper {
+@media (min-width: $laptop-width) {
+  .advantages {
     width: auto;
-    padding: 50px 20px 0;
   }
-  .advantages__topline {
-    margin: 0;
+  .advantages__wrapper {
+    width: 1024px;
+    margin: 0 auto;
+    padding-left: 100px;
+    padding-top: 100px;
+    padding-right: 40px;
   }
   .advantages__teaser {
-    display: none;
+    width: 650px;
   }
-  .advantages__teaser-mobile {
-    width: fit-content;
-    display: inline-block;
-    font-size: 26px;
-    line-height: 32px;
-    font-weight: normal;
-  }
-  .advantages__teaser-mobile:after {
-    content: '';
-    display: block;
+  .advantages__list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
     width: 100%;
-    height: 3px;
-    margin-top: 5px;
-    margin-bottom: 40px;
-    background-color: #c50b1e;
-  }
-  .advantages__button {
-    display: none;
-  }
-  .advantages__item {
-    width: 100%;
-  }
-  .advantages__img {
-    fill: #c50b1e;
-  }
-  .advantages__text {
-    min-height: 60px;
-  }
-}
-@media only screen and (min-width : 320px)and (max-width : 639px) {
-  .advantages__wrapper {
-    width: auto;
-    padding: 50px 20px 0;
-  }
-  .advantages__topline {
-    margin: 0;
-  }
-  .advantages__teaser {
-    display: none;
-  }
-  .advantages__teaser-mobile {
-    width: fit-content;
-    display: inline-block;
-    font-size: 26px;
-    line-height: 32px;
-    font-weight: normal;
-  }
-  .advantages__teaser-mobile:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 3px;
-    margin-top: 5px;
-    margin-bottom: 40px;
-    background-color: #c50b1e;
-  }
-  .advantages__button {
-    display: none;
-  }
-  .advantages__item {
-    width: 100%;
-  }
-  .advantages__img {
-    fill: #c50b1e;
   }
   .mobile-slider__wrap {
-    width: 100%;
+    width: 280px;
+    margin: 0;
+    padding: 0;
+  }
+  .mobile-slider__wrap:last-child {
+    display: block;
+    width: 280px;
+  }
+  .advantages__item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
+    padding: 0;
+    margin-bottom: 35px;
   }
   .advantages__text {
-    min-height: 60px;
+    width: 280px;
+    padding-right: 20px;
+}
+}
+@media (min-width: $desctop-width) {
+  .advantages__wrapper {
+    width: 1280px;
+    margin: 0 auto;
+    padding-left: 155px;
+    padding-top: 100px;
+    padding-right: 55px;
+  }
+  .advantages__topline {
+    display: flex;
+    align-items: center;
+    margin-bottom: 70px;
+    
+  }
+  .advantages__teaser {
+    width: 650px;
+    margin-right: 185px;
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: normal;
+  }
+  .advantages__teaser-mobile {
+    display: none;
+  }
+  .advantages__button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #c50b1e;
+    text-transform: none;
+    font-weight: normal;
+    color: #fff;
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;;
+    align-items: flex-start;
+  }
+
+  .advantages__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    margin-right: 40px;
+    margin-bottom: 35px;
+  }
+  .advantages__img {
+    margin-bottom: 10px;
+    align-self: flex-start;
+    fill: #c50b1e;
+  }
+
+  .advantages__title {
+    margin-bottom: 11px;
+    align-self: flex-start;
+    color: #000;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .advantages__text {
+    min-height: 80px;
+    font-size: 14px;
+    line-height: 18px;
   }
 }
+
+
