--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,100 +1,47 @@
 .contacts {
-  position: relative;
   width: auto;
-  background-color: #f9f9f9;
+  background-color: #fff;
 }
-
 .contacts__wrapper {
   display: flex;
-  width: 1280px;
-  margin: 0 auto;
-  padding-left: 155px;
-  padding-top: 100px;
-  padding-bottom: 50px;
-  padding-right: 55px;
+  flex-direction: column;
+  min-width: 320px;
+  padding: 20px;
+}
+.contacts__item {
+  order: 1;
+}
+.contacts__item span {
+  display: none;
 }
 .contacts__map {
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 50%;
+  display: none;
 }
-.contacts__title { 
-  margin-bottom: 25px;
-  font-size: 28px;
-  line-height: 38px;
-}
-
-.contacts__text {
-  width: 250px;
-  margin-bottom: 30px;
-  font-size: 16px;
-  line-height: 22px;
-}
-
-.contacts__text span {
+.contacts__form {
+  position: static;
+  transform: none;
+  width: 100%;
   display: block;
-  font-size: 18px;
-  line-height: 24px;
-  text-transform: uppercase;
-}
-.contacts__phone {
-  display: block;
-  width: 250px;
-  margin-bottom: 30px;
-  font-size: 16px;
-  line-height: 22px;
-  color: #000;
-}
-.contacts__phone span {
-  display: block;
-  font-size: 18px;
-  line-height: 24px;
-  text-transform: uppercase;
-}
-.contacts__email {
-  display: block;
-  width: 250px;
-  font-size: 16px;
-  line-height: 22px;
-  color: #000;
-}
-.contacts__email span {
-  display: block;
-  font-size: 18px;
-  line-height: 24px;
-  text-transform: uppercase;
-}
-.form {
-  position: absolute;
-  top: 125px;
-  left: 50%;
-  right: 50%;
-  display: block;
-  padding: 40px 30px 50px;
-  margin: 0 auto;
-  width: 370px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-  transform: translateX(-135px);
+  padding: 0;
+  margin-bottom: 60px;
+  border-radius: 0;
+  box-shadow: none;
   background-color: #fff;
   text-align: left;
   z-index: 5;
-
 }
+
 .form__title {
+  display: none;
+}
+.form__title-mobile {
   display: block;
-  margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
   font-size: 24px;
   line-height: 33px;
   font-weight: normal;
 }
-.form__title-mobile {
-  display: none;
-}
+
 .form__inputs {
   display: flex;
   flex-direction: column;
@@ -185,6 +132,10 @@
 .form__check-lable {
   font-size: 10px;
 }
+.form__link {
+  color: #787878;
+}
+
 .form__button {
   width: 180px;
   display: inline-block;
@@ -241,6 +192,34 @@
   font-size: 16px;
   line-height: 22px;
 }
+.contacts__title {
+  display: none;
+}
+
+.contacts__text {
+  width: 250px;
+  margin-bottom: 30px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.contacts__phone {
+  display: block;
+  width: 250px;
+  margin-bottom: 30px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000;
+}
+
+.contacts__email {
+  display: block;
+  width: 250px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000;
+}
+
 .social {
   display: flex;
   flex-direction: column;
@@ -269,131 +248,262 @@
 .social__link:hover {
   opacity: .4;
 }
+
 .social__private {
-  margin-top: 150px;
+  text-align: left;
+  margin-top: 30px;
 }
 .social__private a {
-  display: block;
+  display: inline-block;
   color: #000;
+  text-decoration: none;
+  margin-bottom: 8px;
+}
+.social__private a:hover {
+  color: #c50b1e;
+}
+.social__private a:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin-top: 2px;
+  background-color: #c50b1e;
+}
+.social__private:hover a:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin-top: 2px;
+  background-color: #d73a4a;
 }
 
-@media only screen and (min-width : 960px) and (max-width : 1120px) {
+@media (min-width: $tablet-width) {
+  .contacts {
+    width: auto;
+  }
+  .contacts__wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 768px;
+    margin: 0 auto;
+    padding-left: 100px;
+    padding-top: 100px;
+    padding-right: 40px;
+  }
+  .contacts__form {
+    position: static;
+    transform: none;
+    width: 100%;
+    display: block;
+    padding: 0;
+    margin-bottom: 60px;
+    border-radius: 0;
+    box-shadow: none;
+    background-color: #fff;
+    text-align: left;
+    z-index: 5;
+  }
+
+  .form__title {
+    display: block;
+    margin-bottom: 25px;
+    font-size: 24px;
+    line-height: 33px;
+    font-weight: normal;
+  }
+  .form__title-mobile {
+    display: none;
+  }
+  .form__title {
+    display: block;
+  }
+
+  .form__title-mobile {
+    display: none;
+  }
+  .social__private {
+    position: relative;
+    padding-top: 100px;
+    z-index: 3;
+  }
+  .social__private a {
+  
+  }
+}
+
+@media (min-width: $laptop-width) {
+  .contacts {
+    position: relative;
+    width: auto;
+  }
   .contacts__wrapper {
     display: flex;
     width: 1024px;
     margin: 0 auto;
-    padding-left: 135px;
+    padding-left: 100px;
+    padding-top: 100px;
+    padding-right: 40px;
+  }
+  .contacts {
+    position: relative;
+    width: auto;
+    background-color: #f9f9f9;
+  }
+  .contacts__map {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    margin: auto;
+    width: 50%;
+    z-index: 1;
+    padding-bottom: 10px;
+  }
+  .contacts__title { 
+    margin-bottom: 25px;
+    font-size: 28px;
+    line-height: 38px;
+  }
+
+  .contacts__text {
+    width: 250px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .contacts__phone {
+    display: block;
+    width: 250px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+  }
+
+  .contacts__email {
+    display: block;
+    width: 250px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+  }
+
+  .form {
+    position: absolute;
+    top: 125px;
+    left: 50%;
+    right: 50%;
+    display: block;
+    padding: 40px 30px 50px;
+    margin: 0 auto;
+    width: 370px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    transform: translateX(-135px);
+    background-color: #fff;
+    text-align: left;
+    z-index: 5;
+  }
+  .social__private {
+    padding-top: 300px
+  }
+  .social__private a {
+    margin-right: 20px;
+  }
+}
+@media (min-width: $desctop-width) {
+  .contacts {
+    position: relative;
+    width: auto;
+    background-color: #f9f9f9;
+    padding-top: -100px;
+  }
+
+  .contacts__wrapper {
+    display: flex;
+    width: 1280px;
+    margin: 0 auto;
+    padding-left: 155px;
     padding-top: 100px;
     padding-right: 55px;
   }
-  .form__title {
+  .contacts__map {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
     display: block;
+    margin: auto;
+    width: 50%;
+    height: 100%;
   }
-  .form__title-mobile {
-    display: none;
+  .contacts__title { 
+    margin-bottom: 25px;
+    font-size: 28px;
+    line-height: 38px;
   }
-}
-@media only screen and (min-width : 640px) and (max-width : 959px) {
-.contacts {
-    width: auto;
-    background-color: #fff;
+
+  .contacts__text {
+    width: 250px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 22px;
   }
-  .contacts__wrapper {
+
+  .contacts__phone {
+    display: block;
+    width: 250px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+  }
+
+  .contacts__email {
+    display: block;
+    width: 250px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+  }
+  
+  .social {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 70px 30px 0;
-  }
-  .contacts__item {
-    order: 1;
-  }
-  .contacts__item span {
-    display: none;
-  }
-  .contacts__map {
-    display: none;
-  }
-  .contacts__form {
-    position: static;
-    transform: none;
-    width: 100%;
-    display: block;
-    padding: 0;
-    margin-bottom: 60px;
-    border-radius: 0;
-    box-shadow: none;
-    background-color: #fff;
-    text-align: left;
-    z-index: 5;
-    }
-  .form__title {
-    display: none;
-  }
-  .form__title-mobile {
-    display: block;
     margin-top: 40px;
-    font-size: 24px;
-    line-height: 33px;
-    font-weight: normal;
   }
-  .contacts__title {
-    display: none;
+  .social__list {
+    list-style: none;
   }
-  .social__private {
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 25px;
-  }
-}
-@media only screen and (min-width : 320px)and (max-width : 639px) {
-  .contacts {
-    width: auto;
-    background-color: #fff;
-  }
-  .contacts__wrapper {
+
+  .social__list {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 70px 20px 0;
+    justify-content: flex-start;
+    align-items: center;
   }
-  .contacts__item {
-    order: 1;
+  .social__item {
+    margin-right: 20px;
   }
-  .contacts__item span {
-    display: none;
+  .social__link {
+    width: 30px;
+    height: 30px;
   }
-  .contacts__map {
-    display: none;
+  .social__link svg  {
+    fill: #c50b1e;
   }
-  .contacts__form {
-    position: static;
-    transform: none;
-    width: 100%;
-    display: block;
-    padding: 0;
-    margin-bottom: 60px;
-    border-radius: 0;
-    box-shadow: none;
-    background-color: #fff;
-    text-align: left;
-    z-index: 5;
-    }
-  .form__title {
-    display: none;
-  }
-  .form__title-mobile {
-    display: block;
-    margin-top: 40px;
-    font-size: 24px;
-    line-height: 33px;
-    font-weight: normal;
-  }
-  .contacts__title {
-    display: none;
+  .social__link:hover {
+    opacity: .4;
   }
   .social__private {
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+  }
+  .social__private a {
+    display: inline-block;
+    color: #000;
   }
 }
