--- a/app/scss/blocks/mobile-menu.scss
+++ b/app/scss/blocks/mobile-menu.scss
@@ -1,114 +1,117 @@
 .mobile-menu {
-  display: none;
+  display: block;
 }
 
-@media only screen and (min-width : 320px) and (max-width : 959px) {
+.menu-btn {
+  position: fixed;
+  right: 20px;
+  top: 30px;
+  display: block;
+  z-index: 30;
+  outline: none; 
+}
+.menu-btn .burger {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 4px;
+  background-color: #fff;
+  outline: none; 
+}
+.menu-btn .burger--dark {
+  background-color: #000;
+}
+.menu-btn .burger:before, 
+.menu-btn .burger:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 40px;
+  height: 4px;
+  background-color: inherit;
+  transition: all .3s ease;
+}
+.menu-btn .burger:before {
+  top: -9px;
+}
+.menu-btn .burger:after {
+  top: 9px;
+}
+ .menu-btn .burger.active {
+  background: transparent; 
+}
+.menu-btn .burger.active:before,
+.menu-btn .burger.active:after {
+  background: #C50B1E;
+}
+.menu-btn .burger.active:after {
+  transform: rotate(-45deg);
+  top: 0px;
+}
+.menu-btn .burger.active:before {
+  transform: rotate(45deg);
+  top: 0px;
+}
+
+.m-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 25;
+  transform: translateX(-100%);
+  transition: all .3s ease;
+}
+.m-menu-show {
+  transform: translateX(0);
+  background: rgba(255, 250, 250, 1);
+}
+.m-menu__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  margin-left: 35px;
+  margin-bottom: 35px;
+}
+.m-menu__link {
+  text-align: left;
+  display: block;
+  font-size: 32px;
+  line-height: 43px;
+  color: #000;
+}
+.m-menu__email,
+.m-menu__phone {
+  align-self: flex-start;
+  display: block;
+  margin-left: 20px;
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000;
+}
+.m-menu__link:hover,
+.m-menu__email:hover,
+.m-menu__phone:hover{
+  color: #C50B1E;
+}
+.m-menu__link:active,
+.m-menu__email:active,
+.m-menu__phone:active {
+  color: #b51828;
+}
+.m-menu__email {
+  align-self: flex-start;
+}
+
+@media (min-width: $tablet-width) {
   .mobile-menu {
-    display: block;
-  }
-  .menu-btn {
-    position: fixed;
-    right: 20px;
-    top: 40px;
-    display: block;
-    z-index: 30;
-    outline: none; 
-  }
-  .menu-btn .burger {
-    position: relative;
-    display: block;
-    width: 40px;
-    height: 4px;
-    background-color: #000;
-    outline: none; 
-  }
-
-  .menu-btn .burger:before, 
-  .menu-btn .burger:after {
-    position: absolute;
-    content: '';
-    display: block;
-    width: 40px;
-    height: 4px;
-    background-color: inherit;
-    transition: all .3s ease;
-  }
-  .menu-btn .burger:before {
-    top: -9px;
-  }
-  .menu-btn .burger:after {
-    top: 9px;
-  }
-   .menu-btn .burger.active {
-    background: transparent; 
-  }
-  .menu-btn .burger.active:before,
-  .menu-btn .burger.active:after {
-    background: #000;
-  }
-  .menu-btn .burger.active:after {
-    transform: rotate(-45deg);
-    top: 0px;
-  }
-  .menu-btn .burger.active:before {
-    transform: rotate(45deg);
-    top: 0px;
-  }
-
-  .m-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: rgba(255, 250, 250, 1);
-    z-index: 25;
-    transform: translateX(-100%);
-    transition: all .3s ease;
-  }
-  .m-menu-show {
-    transform: translateX(0);
-  }
-  .m-menu__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width: 100%;
-    margin-left: 35px;
-    margin-bottom: 35px;
-  }
-  .m-menu__link {
-    text-align: left;
-    display: block;
-    font-size: 32px;
-    line-height: 43px;
-    color: #000;
-  }
-  .m-menu__email,
-  .m-menu__phone {
-    align-self: flex-start;
-    display: block;
-    margin-left: 20px;
-    margin-top: 20px;
-    font-size: 16px;
-    line-height: 22px;
-    color: #000;
-  }
-  .m-menu__link:hover,
-  .m-menu__email:hover,
-  .m-menu__phone:hover{
-    color: #C50B1E;
-  }
-  .m-menu__link:active,
-  .m-menu__email:active,
-  .m-menu__phone:active {
-    color: #b51828;
-  }
-  .m-menu__email {
-    align-self: flex-start;
+    display: none;
   }
 }
