--- a/app/scss/blocks/nav.scss
+++ b/app/scss/blocks/nav.scss
@@ -1,65 +1,66 @@
 .nav__list {
-  display: flex;
-  justify-content: flex-start;
-  list-style: none;
+  display: none;
 }
-.nav__item {
-  display: block;
-  list-style: none;
-  margin-right: 25px;
-}
+@media (min-width: $tablet-width) {
+  .nav__list {
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
+  }
 
-.nav__item:last-child {
-  margin-right: 0;
-}
-.nav__link {
-  position: relative;
-  display: block;
-  padding-bottom: 5px;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: normal;
-  сolor: #fff;
-}
-.nav__link:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 0;
-  height: 2px;
-  background-color: #C50B1E;
-  transition: all .3s;
-}
-.nav__item:hover .nav__link:after{
-  width: 100%;
-}
-
-.nav__item.active .nav__link:after{
-  width: 100%;
-}
-
-body.fp-viewing-about .nav__link,
-body.fp-viewing-advantages .nav__link,
-body.fp-viewing-reviews .nav__link,
-body.fp-viewing-contacts .nav__link {
-  color: #000;
-}
-
-@media only screen and (min-width : 960px) and (max-width : 1120px) {
   .nav__item {
+    display: block;
+    list-style: none;
     margin-right: 20px;
   }
+
+  .nav__item:last-child {
+    margin-right: 0;
+  }
   .nav__link {
+    position: relative;
+    display: block;
+    padding-bottom: 5px;
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     line-height: 19px;
+    font-weight: normal;
+    сolor: #fff;
+  }
+  .nav__link:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 0;
+    height: 2px;
+    background-color: #C50B1E;
+    transition: all .3s;
+  }
+  .nav__item:hover .nav__link:after{
+    width: 100%;
+  }
+
+  .nav__item.active .nav__link:after{
+    width: 100%;
+  }
+
+  body.fp-viewing-about .nav__link,
+  body.fp-viewing-advantages .nav__link,
+  body.fp-viewing-reviews .nav__link,
+  body.fp-viewing-contacts .nav__link {
+    color: #000;
   }
 }
-@media only screen and (min-width : 640px) and (max-width : 959px) {
 
-}
-@media only screen and (min-width : 320px)and (max-width : 639px) {
 
+@media (min-width: $desctop-width) {
+  .nav__item {
+    margin-right: 30px;
+  }
+  .nav__link {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
